<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation_8"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutInsideCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:padding="@dimen/layout_padding16">

            <TextView
                android:id="@+id/projectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_32"
                android:text="@string/artify_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_size_50"
                android:layout_marginTop="@dimen/spacing_60"
                android:background="@drawable/text_background"
                android:hint="@string/enter_image_name"
                android:paddingStart="@dimen/layout_padding12"
                android:textSize="@dimen/text_size_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/projectName" />

            <Button
                android:id="@+id/generateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_32"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/generate_name"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchEditText" />

            <ImageView
                android:id="@+id/logoutIcon"
                android:layout_width="@dimen/image_size_40"
                android:layout_height="@dimen/image_size_40"
                android:clickable="true"
                android:contentDescription="@string/log_out_name"
                android:focusable="true"
                android:src="@drawable/logout__4_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_16"
        android:contentDescription="@string/List_of_images"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/loadingGif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        tools:listitem="@layout/item_image" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loadingGif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_32"
        android:layout_marginEnd="@dimen/spacing_32"
        android:layout_marginBottom="@dimen/spacing_75"
        android:src="@drawable/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewImage" />

</androidx.constraintlayout.widget.ConstraintLayout>

